--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.16",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "validator": "^13.0.0"
   }
