--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
+    "helmet": "^3.23.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.8",
     "nodemon": "^2.0.4",
-    "validator": "^13.0.0"
+    "validator": "^13.0.0",
+    "xss-clean": "^0.1.1"
   }
 }
